--- a/app/src/main/res/layout/activity_success.xml
+++ b/app/src/main/res/layout/activity_success.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <Button
+            android:id="@+id/bt_success"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/dismiss"
